[project]
name = "libdyson-neon"
version = "1.4.1"
description = "A Python library for Dyson devices."
authors = [
    { name = "The libdyson Working Group", email = "dotvezz@gmail.com" }
]
dependencies = [
    "attrs",
    "cryptography>=3.1",
    "paho_mqtt",
    "requests",
    "zeroconf",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT License" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/libdyson_neon"]
